Fixed the shell command plugin to show the selected items when launched.

BUG: 271126
FIXED-IN: 4.9.2
REVIEW: 106440